fixed under construction image hidden on mobile

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -29,9 +29,12 @@ a{
 }
 
 .hero-img{
-    /* width: 700px; */
-	height: 400px;
-	object-fit: contain;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.hero-section{
+    height: 300px;
 }
 
 .my-wrap{
